--- a/demos/showcase/showcase-webapp/src/main/webapp/views/component.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/views/component.xhtml
@@ -57,7 +57,7 @@
 		<h3>#{i18n['source-code']}</h3>
 		<alloy:tabView value="#{showcaseModelBean.selectedComponent.useCaseCodeExamples}" var="useCaseCodeExample">
 			<alloy:tab label="#{useCaseCodeExample.fileName}">
-				<alloy:aceEditor mode="#{useCaseCodeExample.fileExtension}" readOnly="true" showPrintMargin="false"
+				<alloy:inputSourceCode mode="#{useCaseCodeExample.fileExtension}" readOnly="true" showPrintMargin="false"
 					useWrapMode="false" width="900" value="#{useCaseCodeExample.rawText}" />
 			</alloy:tab>
 		</alloy:tabView>
