--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/default-value/selectStarRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/default-value/selectStarRating.xhtml
@@ -39,12 +39,12 @@
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
 				</alloy:selectStarRating>
 				<hr />
-				<h:commandButton action="#{starRatingBackingBean.submit}" value="#{i18n['submit']}">
+				<h:commandButton action="#{selectStarRatingBackingBean.submit}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
 				</h:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText id="modelValue" value="#{starRatingModelBean.favoriteId}" />
+				<h:outputText id="modelValue" value="#{selectStarRatingModelBean.favoriteId}" />
 			</showcase:outputModel>
 		</h:form>
 	</ui:define>
