--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/general/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/general/selectOneRadio.xhtml
@@ -5,10 +5,7 @@
 
 	<ui:define name="col1">
 		<h:form>
-			<aui-nongen:field label="#{i18n['component']}">
-				<showcase:componentRenderedCheckbox />
-				<showcase:componentRequiredCheckbox />
-				<br />
+			<showcase:example renderedCheckbox="true" requiredCheckbox="true">
 				<alloy:selectOneRadio id="starRating" label="#{i18n['favorite']}:" 
 					rendered="#{showcaseModelBean.selectedComponent.rendered}"
 					required="#{showcaseModelBean.selectedComponent.required}" value="#{selectOneRadioModelBean.favorite}">
@@ -19,15 +16,13 @@
 					<f:selectItem itemLabel="Open Source" itemValue="Open Source" />
 				</alloy:selectOneRadio>
 				<h:message for="starRating" />
-			</aui-nongen:field>
+			</showcase:example>
 			<h:commandButton action="#{selectOneRadioBackingBean.submit}" value="#{i18n['submit']}">
 				<f:ajax execute="@form" render="@form" />
 			</h:commandButton>
-			<aui-nongen:field label="#{i18n['model-value']}">
-				<showcase:outputModel>
-					<h:outputText value="#{selectOneRadioModelBean.favorite}" />
-				</showcase:outputModel>
-			</aui-nongen:field>
+			<showcase:outputModel>
+				<h:outputText id="modelValue" value="#{selectOneRadioModelBean.favorite}" />
+			</showcase:outputModel>
 		</h:form>
 	</ui:define>
 
