--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/instant-ajax/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/instant-ajax/selectOneRadio.xhtml
@@ -5,7 +5,7 @@
 
 	<ui:define name="col1">
 		<h:form>
-			<aui-nongen:field label="#{i18n['component']}">
+			<showcase:example>
 				<alloy:selectOneRadio label="#{i18n['favorite']}:" 
 					value="#{selectOneRadioModelBean.favoriteId}">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
@@ -15,12 +15,10 @@
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
 					<f:ajax render="@form" />
 				</alloy:selectOneRadio>
-			</aui-nongen:field>
-			<aui-nongen:field label="#{i18n['model-value']}">
-				<showcase:outputModel>
-					<h:outputText value="#{selectOneRadioModelBean.favoriteId}" />
-				</showcase:outputModel>
-			</aui-nongen:field>
+			</showcase:example>
+			<showcase:outputModel>
+				<h:outputText value="#{selectOneRadioModelBean.favoriteId}" />
+			</showcase:outputModel>
 		</h:form>
 	</ui:define>
 
