--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/layout/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectoneradio/layout/selectOneRadio.xhtml
@@ -1,15 +1,12 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:aui-nongen="http://liferay.com/faces/aui-nongen" xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
-	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-3col.xhtml">
+	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example#1: lineDirection -->
+		<!-- Example 1: lineDirection -->
 		<h:form>
-			<aui-nongen:field label="#{i18n['example-1']}">
-				<h:outputText value="#{i18n['aui-selectoneradio-layout-example-1']}" />
-			</aui-nongen:field>
-			<aui-nongen:field label="#{i18n['component']}">
+			<showcase:example description="#{i18n['alloy-selectoneradio-layout-example-1']}" number="1" >
 				<alloy:selectOneRadio id="starRating" label="#{i18n['favorite']}:" layout="lineDirection"
 					value="#{selectOneRadioModelBean.favorite}">
 					<f:selectItem itemLabel="Compatible" itemValue="Compatible" />
@@ -19,25 +16,20 @@
 					<f:selectItem itemLabel="Open Source" itemValue="Open Source" />
 				</alloy:selectOneRadio>
 				<h:message for="starRating" />
-			</aui-nongen:field>
+			</showcase:example>
 			<h:commandButton action="#{selectOneRadioBackingBean.submit}" value="#{i18n['submit']}">
 				<f:ajax execute="@form" render="@form" />
 			</h:commandButton>
-			<aui-nongen:field label="#{i18n['model-value']}">
-				<showcase:outputModel>
-					<h:outputText value="#{selectOneRadioModelBean.favorite}" />
-				</showcase:outputModel>
-			</aui-nongen:field>
+			<showcase:outputModel>
+				<h:outputText id="modelValue" value="#{selectOneRadioModelBean.favorite}" />
+			</showcase:outputModel>
 		</h:form>
 	</ui:define>
 
 	<ui:define name="col2">
-		<!-- Example#2: pageDirection -->
+		<!-- Example 2: pageDirection -->
 		<h:form>
-			<aui-nongen:field label="#{i18n['example-2']}">
-				<h:outputText value="#{i18n['aui-selectoneradio-layout-example-2']}" />
-			</aui-nongen:field>
-			<aui-nongen:field label="#{i18n['component']}">
+			<showcase:example description="#{i18n['alloy-selectoneradio-layout-example-2']}" number="2" >
 				<alloy:selectOneRadio id="starRating" label="#{i18n['favorite']}:" layout="pageDirection"
 					value="#{selectOneRadioModelBean.favorite}">
 					<f:selectItem itemLabel="Compatible" itemValue="Compatible" />
@@ -47,15 +39,13 @@
 					<f:selectItem itemLabel="Open Source" itemValue="Open Source" />
 				</alloy:selectOneRadio>
 				<h:message for="starRating" />
-			</aui-nongen:field>
+			</showcase:example>
 			<h:commandButton action="#{selectOneRadioBackingBean.submit}" value="#{i18n['submit']}">
 				<f:ajax execute="@form" render="@form" />
 			</h:commandButton>
-			<aui-nongen:field label="#{i18n['model-value']}">
-				<showcase:outputModel>
-					<h:outputText value="#{selectOneRadioModelBean.favorite}" />
-				</showcase:outputModel>
-			</aui-nongen:field>
+			<showcase:outputModel>
+				<h:outputText id="modelValue" value="#{selectOneRadioModelBean.favorite}" />
+			</showcase:outputModel>
 		</h:form>
 	</ui:define>
 
