--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtextarea/validation/inputTextarea.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtextarea/validation/inputTextarea.xhtml
@@ -5,8 +5,8 @@
 
 	<ui:define name="col1">
 		<h:form>
-			<!-- Example 1: Validating an email address via the validator attribute. -->
-			<showcase:example description="#{i18n['alloy-inputtextarea-validation-example-1']}" longDescription="true" number="1">
+			<!-- Example 1: Validating an email address using the validator attribute. -->
+			<showcase:example description="#{i18n['validating-an-email-address-using-validator-attribute']}" number="1">
 				<alloy:inputTextarea id="textarea" validator="#{inputTextBackingBean.emailAddressValidator}"
 					validatorMessage="#{i18n['validator-message']}" value="#{inputTextModelBean.text}" />
 				<h:message for="textarea" />
@@ -21,10 +21,11 @@
 	</ui:define>
 
 	<ui:define name="col2">
-		<!-- Example 2: Validating an email address via specifying an f:validateRegex child tag. -->
+		<!-- Example 2: Validating an email address using an f:validateRegex child tag. -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-inputtextarea-validation-example-2']}" longDescription="true" number="2">
-				<alloy:inputTextarea id="textarea" validatorMessage="#{i18n['validator-message']}" value="#{inputTextModelBean.text}">
+			<showcase:example description="#{i18n['validating-an-email-address-using-f-validateregex']}" number="2">
+				<alloy:inputTextarea id="textarea" validatorMessage="#{i18n['validator-message']}"
+					value="#{inputTextModelBean.text}">
 					<f:validateRegex pattern=".+[@].+[.].+" />
 				</alloy:inputTextarea>
 				<h:message for="textarea" />
