--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/param/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/param/commandButton.xhtml
@@ -7,7 +7,7 @@
 		<h:form>
 			<showcase:example>
 				<alloy:commandButton
-					action="/views/component.xhtml?faces-redirect=true&amp;componentPrefix=aui&amp;componentName=commandbutton&amp;componentUseCase=navigation&amp;foo=1234">
+					action="/views/component.xhtml?faces-redirect=true&amp;componentPrefix=alloy&amp;componentName=commandbutton&amp;componentUseCase=navigation&amp;foo=1234">
 					<alloy:icon name="arrow-left" />
 					<h:outputText value=" #{i18n['back-to-navigation-with']} foo=1234" />
 				</alloy:commandButton>
